--- a/IntraNet/Actualite.html
+++ b/IntraNet/Actualite.html
@@ -12,7 +12,7 @@
             <div class="e">
                 <a href="https://www.univ-amu.fr/"><img src="img/logo_blanc_iut.png" alt="site original de l'iut"></a>
 
-                <h1 class = "logo_title">Intranet Département Informatique AMU</h1>
+                <h3 class = "logo_title">Intranet Département Informatique AMU</h3>
             </div>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
@@ -56,6 +56,6 @@
         <a class="logo" href="https://www.univ-amu.fr/"><img src="img/logo_amu_header.png"></a>
 
     </footer>
-
+    <script src="javascript/redirect.js"></script>
 </body>
 </html>
