--- a/IntraNet/BoutiqueBDE.html
+++ b/IntraNet/BoutiqueBDE.html
@@ -23,7 +23,7 @@
         <div class="e">
             <a href="index.html"><img src="img/logo_amu_header.png" alt="Accueil"></a>
 
-            <h1 class = "logo_title">Intranet Département Informatique AMU</h1>
+            <h3 class = "logo_title">Intranet Département Informatique AMU</h3>
         </div>
         <ul>
             <li><a href="index.html">Accueil</a></li>
@@ -139,5 +139,6 @@
             <div>Kinder bueno ou une de ses variantes (white)</div></a>
     </div>
 </div>
+<script src="javascript/redirect.js"></script>
 </body>
 </html>
