--- a/IntraNet/ReservationSalle.html
+++ b/IntraNet/ReservationSalle.html
@@ -12,7 +12,7 @@
             <div class="e">
                 <a href="index.html"><img src="img/logo_amu_header.png" alt="Accueil"></a>
 
-                <h1 class = "logo_title">Intranet Département Informatique AMU</h1>
+                <h3 class = "logo_title">Intranet Département Informatique AMU</h3>
             </div>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
@@ -85,5 +85,6 @@
         <button name="Salle  " value=" TP-I211" class="salle_rez_de_chaussee">Salle TP-I211</button>
     </div>
     </form>
+    <script src="javascript/redirect.js"></script>
 </body>
 </html>
