--- a/site_departement_info/html/login.html
+++ b/site_departement_info/html/login.html
@@ -35,7 +35,7 @@
         <input type="password" id="cpassword" placeholder="Entrer le mot de passe" name="password" required>
     </div>
     
-    <input type="submit" id='submit' value="Accéder à l'intranet" onclick="envoie();" >
+    <input type="submit" id='submit' value="Connexion à l'intranet" onclick="envoie();" >
     <input type="submit" id='mdp' value="Modifier mon mot de passe" onclick="modif();" >
     <input type="submit" id='deco' value="Se déconnecter" onclick="deco();" >
     <input type="submit" id='reset' value="Réinitialiser tout les mots de passes" onclick="reset();" >
