--- a/site_departement_info/html/login.html
+++ b/site_departement_info/html/login.html
@@ -3,6 +3,8 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="../css/login.css" media="screen" type="text/css" />
     <link rel="stylesheet" href="../css/style.css" media="screen" type="text/css" />
+    <link rel="icon" type="image/png" href="../images/logo/logo.png">
+    <title>Département informatique - Login</title>
 </head>
 <body>
     
