--- a/site_departement_info/html/bde.html
+++ b/site_departement_info/html/bde.html
@@ -26,7 +26,7 @@
     </nav>
     <div class="content4">
         <h3>Le BDE de notre département</h3>
-        <p>Le BDE (Bureau des élèves) est un endroit où l'on peut se detendre tout en profitant des services proposés par les membres du BDE tel q'une ps4, une switch, et plusieurs mangas totalement gratuitement ! Vous pourrez aussi profiter des snacks et des boissons vendu par les membres à moindre coût !<br>Le BDE est ouvert tous les jours de la semaines pendant les pauses y compris celle du midi.</p>
+        <p>Le BDE (Bureau des élèves) est un endroit où l'on peut se detendre tout en profitant des services proposés par les membres du BDE tel qu'une ps4, une switch, et plusieurs mangas totalement gratuitement ! Vous pourrez aussi profiter des snacks et des boissons vendu par les membres à moindre coût !<br>Le BDE est ouvert tous les jours de la semaines pendant les pauses y compris celle du midi.</p>
 
     </div>
     <div class="imgbde"></div>
